fix tabbar not selected after click on ios, sliding-menu overflow, convient css class full-width, full-height, plugin_info.json

--- a/app/css/common.css
+++ b/app/css/common.css
@@ -7,8 +7,22 @@
     right: 0;    
 }
 
+.absolute {
+	position: absolute;
+}
+
 .relative {
 	position: relative;
 }
 
+.full-width {
+	width: 100%;
+}
 
+.full-height {
+	height: 100%;
+}
+
+
+
+* { -webkit-tap-highlight-color: rgba(0,0,0,0);} 
